fix matrix being too tall

--- a/src/Pages/Landing/components/matrixBG.module.css
+++ b/src/Pages/Landing/components/matrixBG.module.css
@@ -4,5 +4,5 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
